active menu class update

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,24 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+.bg-image {
+  background-image: url("./assets/svgs/banner.svg");
+  /* Replace with the actual path to your image */
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.bg-image2 {
+  background-image: url("./assets/svgs/banner-play-movie.svg");
+  /* Replace with the actual path to your image */
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.poppins {
+  font-family: "Poppins", sans-serif;
+}
+
+.dm-sans {
+  font-family: "DM Sans", sans-serif;
+}
